# Retail-Smart-Hub-

./: .gitignore  README.md  agent-answer-flow.md  start.bat
Retail-Smart-Hub/: .env.example  .gitignore  .prettierignore  .prettierrc.json  eslint.config.mjs  index.html  metadata.json  package-lock.json  package.json  start.bat  tsconfig.json  tsconfig.server.json  vite.config.ts
Retail-Smart-Hub/.github/workflows/: ci.yml  release.yml
Retail-Smart-Hub/archive/src-tauri-legacy/: Cargo.toml  tauri.conf.json
Retail-Smart-Hub/archive/src-tauri-legacy/capabilities/: default.json
Retail-Smart-Hub/archive/src-tauri-legacy/src/: lib.rs  main.rs
Retail-Smart-Hub/electron/: main.cjs  preload.cjs
Retail-Smart-Hub/public/: manifest.webmanifest
Retail-Smart-Hub/public/templates/: ai-customer-import-template.csv  ai-customer-import-template.xlsx  ai-order-import-template.csv  ai-order-import-template.xlsx  ai-product-import-template.csv  ai-product-import-template.xlsx  rag-eval-sample.json
Retail-Smart-Hub/python-agent/: main.py  requirements.txt
Retail-Smart-Hub/python-agent/app/: api.py  builtin_tools.py  common.py  deps.py  document_skill.py  evidence_pack.py  image_evidence.py  (+12 more)
Retail-Smart-Hub/scripts/: check-install-state.cjs  clean-install.mjs  clean-release-workspace.mjs  dev-desktop.mjs  ensure-platform-install.mjs  export-release-source.mjs  finalize-server-build.mjs  guard-ai-python-first.mjs  release-build.mjs  release-preflight.mjs  release-rollback.mjs  runtime-check.mjs  start-electron.cjs
Retail-Smart-Hub/src/: App.tsx  index.css  vite-env.d.ts
(+164 files in other folders)
