[package]
name = "retail-smart-hub-desktop"
version = "0.1.0"
description = "Retail Smart Hub desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "retail_smart_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
